add structure of video

--- a/index.html
+++ b/index.html
@@ -6,6 +6,78 @@
     <title>Youtube-clone</title>
 </head>
 <body>
+    <section>
+      <div>
+        <header>
+
+        </header>
+        <nav>
+
+        </nav>
+    </div>
+    </section>
+    <main>
+        <section>
+            <video width="320" height="240" controls>
+                <source src="https://www.youtube.com/watch?v=V74l_zS1x8E" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+            <div class="video-description">
+                <h3 class ="video-title"></h3>
+                <img src="" alt="" class="avatar">
+                <p class="avatar-name">Odin Project</p>
+                <h4 class="number-of-views">5,000 Views</h4>
+                <i class="like-icon"></i>
+                <i class="dislike-icon"></i>
+                <button class="share-button"></button>
+                <button class="subscribe-button"></button>
+            </div>  
+        </section>
+        <section>
+
+
+
+        </section>
+
+    </main>
+    <aside>
+        <div class="sidebar-headings">
+            <p>Up Next</p>
+            <i class="autoplay-icon">Autoplay</i>
+        </div>
+        <div class="recommended-videos">
+            <img src="" alt="" class="sidebar-thumbnails">
+            <div class="thumbnail-description">
+                <p class="thumb-title"></p>
+                <p class="thumb-avatar-name"></p>
+                <p class="thumb-number-of-views">3,000 Views</p>
+            </div>
+        </div>
+        <div class="recommended-videos">
+            <img src="" alt="" class="sidebar-thumbnails">
+            <div class="thumbnail-description">
+                <p class="thumb-title"></p>
+                <p class="thumb-avatar-name"></p>
+                <p class="thumb-number-of-views">3,000 Views</p>
+            </div>
+        </div>
+        <div class="recommended-videos">
+            <img src="" alt="" class="sidebar-thumbnails">
+            <div class="thumbnail-description">
+                <p class="thumb-title"></p>
+                <p class="thumb-avatar-name"></p>
+                <p class="thumb-number-of-views">3,000 Views</p>
+            </div>
+        </div>
+        <div class="recommended-videos">
+            <img src="" alt="" class="sidebar-thumbnails">
+            <div class="thumbnail-description">
+                <p class="thumb-title"></p>
+                <p class="thumb-avatar-name"></p>
+                <p class="thumb-number-of-views">3,000 Views</p>
+            </div>
+        </div>
+    </aside>
     
 </body>
 </html>
