update style.css file

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <img src="" alt="" class="avatar">
                         <p class="avatar-name">Odin Project</p>
                         <div class="subscribe-button">
-                            <button class="subscribe-button-red"><img src="img/subscribing.png" alt="Subscribe" width= "50px" height="15px"></button>
+                            <button class="subscribe-button-red"><img src="img/suscribe-button1.jpg" alt="Subscribe" width= "50px" height="15px"></button>
                             <button class="number-of-suscribers">750</button>
                         </div>
                     </div>
@@ -55,7 +55,6 @@
                         <div class="left-description-icons">
                             <i class="fas fa-plus"></i>
                             <p><a href="">Add to</a></p>
-                            <!-- <img src="img/youtube-share-button.png" alt="" class="share-icon"> -->
                             <i class="fas fa-share"></i>
                             <p><a href="">Share</a></p>
                             <i class="fas fa-ellipsis-h"></i>
@@ -83,10 +82,13 @@
 
 
         <section class="comments">
-            <div></div>
+            <div>
+                <p>loading...</p>
+            </div>
         </section>
 
     </main>
+
     <aside>
         <div class="sidebar-headings">
             <p>Up Next</p>
