add sidebar video and style

--- a/index.html
+++ b/index.html
@@ -110,93 +110,39 @@
             </div>
 
             <div class="recommended-videos">
-                <img src="" alt="" class="sidebar-thumbnails">
+              <a>
+                <img src="/img/aside.png" alt="AWS Solutions" class="sidebar-thumbnails">
                 <div class="thumbnail-description">
-                    <p class="thumb-title"></p>
-                    <p class="thumb-avatar-name"></p>
+                    <p class="thumb-title">Why Get AWS Solutions Architect?</p>
+                    <p class="thumb-avatar-name">freeCodeCamp.org</p>
                     <p class="thumb-number-of-views">3,000 Views</p>
                 </div>
+              </a>
             </div>
 
             <hr>
 
             <div class="recommended-videos">
-                <img src="" alt="" class="sidebar-thumbnails">
+                <img src="/img/aside2.png" alt="React in 5hours" class="sidebar-thumbnails">
                 <div class="thumbnail-description">
-                    <p class="thumb-title"></p>
-                    <p class="thumb-avatar-name"></p>
+                    <p class="thumb-title">React in 5hours</p>
+                    <p class="thumb-avatar-name">freeCodeCamp.org</p>
                     <p class="thumb-number-of-views">3,000 Views</p>
                 </div>
             </div>
             <div class="recommended-videos">
-                <img src="" alt="" class="sidebar-thumbnails">
+                <img src="/img/aside3.webp" alt="JavaScript Tutorial for Beginners - Full Course in 8 Hours [2020]" class="sidebar-thumbnails">
                 <div class="thumbnail-description">
-                    <p class="thumb-title"></p>
-                    <p class="thumb-avatar-name"></p>
+                    <p class="thumb-title">JavaScript Tutorial for Beginners </p>
+                    <p class="thumb-avatar-name">Clever Programmer</p>
                     <p class="thumb-number-of-views">3,000 Views</p>
                 </div>
             </div>
             <div class="recommended-videos">
-                <img src="" alt="" class="sidebar-thumbnails">
+                <img src="/img/aside4.webp" alt="Learn CSS in 20mins" class="sidebar-thumbnails">
                 <div class="thumbnail-description">
-                    <p class="thumb-title"></p>
-                    <p class="thumb-avatar-name"></p>
-                    <p class="thumb-number-of-views">3,000 Views</p>
-                </div>
-            </div>
-            <div class="recommended-videos">
-                <img src="" alt="" class="sidebar-thumbnails">
-                <div class="thumbnail-description">
-                    <p class="thumb-title"></p>
-                    <p class="thumb-avatar-name"></p>
-                    <p class="thumb-number-of-views">3,000 Views</p>
-                </div>
-            </div>
-            <div class="recommended-videos">
-                <img src="" alt="" class="sidebar-thumbnails">
-                <div class="thumbnail-description">
-                    <p class="thumb-title"></p>
-                    <p class="thumb-avatar-name"></p>
-                    <p class="thumb-number-of-views">3,000 Views</p>
-                </div>
-            </div>
-            <div class="recommended-videos">
-                <img src="" alt="" class="sidebar-thumbnails">
-                <div class="thumbnail-description">
-                    <p class="thumb-title"></p>
-                    <p class="thumb-avatar-name"></p>
-                    <p class="thumb-number-of-views">3,000 Views</p>
-                </div>
-            </div>
-            <div class="recommended-videos">
-                <img src="" alt="" class="sidebar-thumbnails">
-                <div class="thumbnail-description">
-                    <p class="thumb-title"></p>
-                    <p class="thumb-avatar-name"></p>
-                    <p class="thumb-number-of-views">3,000 Views</p>
-                </div>
-            </div>
-            <div class="recommended-videos">
-                <img src="" alt="" class="sidebar-thumbnails">
-                <div class="thumbnail-description">
-                    <p class="thumb-title"></p>
-                    <p class="thumb-avatar-name"></p>
-                    <p class="thumb-number-of-views">3,000 Views</p>
-                </div>
-            </div>
-            <div class="recommended-videos">
-                <img src="" alt="" class="sidebar-thumbnails">
-                <div class="thumbnail-description">
-                    <p class="thumb-title"></p>
-                    <p class="thumb-avatar-name"></p>
-                    <p class="thumb-number-of-views">3,000 Views</p>
-                </div>
-            </div>
-            <div class="recommended-videos">
-                <img src="" alt="" class="sidebar-thumbnails">
-                <div class="thumbnail-description">
-                    <p class="thumb-title"></p>
-                    <p class="thumb-avatar-name"></p>
+                    <p class="thumb-title">Learn CSS in 20mins</p>
+                    <p class="thumb-avatar-name">Webdev Simplified</p>
                     <p class="thumb-number-of-views">3,000 Views</p>
                 </div>
             </div>
