Update recommended videos and video description section

--- a/index.html
+++ b/index.html
@@ -35,29 +35,29 @@
         <main>
             <section>
                 <div class="embeded-video">
-                    <iframe src="https://www.youtube.com/embed/gNnKROaiLGA" frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/Qqx_wzMmFeA" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
 
                 <div class="video-description">
                     <div class="video-description-main">
-                        <h1 class="video-title">This is the title of this video</h1>
+                        <h1 class="video-title">Javascript Tutorial for Beginners</h1>
 
                         <div class="video-author-details">
-                            <a href="#"><img src="" alt="avatar-pic" class="avatar"></a>
-                            <a href="#"><p class="avatar-name">Odin Project</p></a>
-
+                            <a href="#"><img src="/img/avatar.jpg" alt="avatar-pic" class="avatar"></a>
+                          <div class="avatar-subscribe-right">
+                            <a href="#"><p class="avatar-name">Clever Programmer</p></a>
                             <a href="#">
                                 <div class="subscribe-button">
-                                    <!--a href="#"><img src="img/suscribe-button1.jpg" alt="subscribe-btn"></a-->
+                                    
                                     <button class="subscribe-button-red">Subscribe</button>
                                     <button class="number-of-suscribers">750</button>
                                 </div>
                             </a>
+                          </div>
+                          <h2 class="number-of-views">5,000 Views</h2>
                         </div>
 
-                        <h2 class="number-of-views">5,000 Views</h2>
+                        
                         <hr>
 
                         <div class="video-description-icons">
@@ -143,6 +143,49 @@
                 <div class="thumbnail-description">
                     <p class="thumb-title">Learn CSS in 20mins</p>
                     <p class="thumb-avatar-name">Webdev Simplified</p>
+                    <p class="thumb-number-of-views">3,000 Views</p>
+                </div>
+            </div>
+
+            <div class="recommended-videos">
+                <a>
+                  <img src="/img/aside.png" alt="AWS Solutions" class="sidebar-thumbnails">
+                  <div class="thumbnail-description">
+                      <p class="thumb-title">Why Get AWS Solutions Architect?</p>
+                      <p class="thumb-avatar-name">freeCodeCamp.org</p>
+                      <p class="thumb-number-of-views">3,000 Views</p>
+                  </div>
+                </a>
+              </div>
+              <div class="recommended-videos">
+                  <img src="/img/aside2.png" alt="React in 5hours" class="sidebar-thumbnails">
+                  <div class="thumbnail-description">
+                      <p class="thumb-title">React in 5hours</p>
+                      <p class="thumb-avatar-name">freeCodeCamp.org</p>
+                      <p class="thumb-number-of-views">3,000 Views</p>
+                  </div>
+              </div>
+              <div class="recommended-videos">
+                  <img src="/img/aside3.webp" alt="JavaScript Tutorial for Beginners - Full Course in 8 Hours [2020]" class="sidebar-thumbnails">
+                  <div class="thumbnail-description">
+                      <p class="thumb-title">JavaScript Tutorial for Beginners </p>
+                      <p class="thumb-avatar-name">Clever Programmer</p>
+                      <p class="thumb-number-of-views">3,000 Views</p>
+                  </div>
+              </div>
+              <div class="recommended-videos">
+                  <img src="/img/aside4.webp" alt="Learn CSS in 20mins" class="sidebar-thumbnails">
+                  <div class="thumbnail-description">
+                      <p class="thumb-title">Learn CSS in 20mins</p>
+                      <p class="thumb-avatar-name">Webdev Simplified</p>
+                      <p class="thumb-number-of-views">3,000 Views</p>
+                  </div>
+              </div>
+              <div class="recommended-videos">
+                <img src="/img/aside3.webp" alt="JavaScript Tutorial for Beginners - Full Course in 8 Hours [2020]" class="sidebar-thumbnails">
+                <div class="thumbnail-description">
+                    <p class="thumb-title">JavaScript Tutorial for Beginners </p>
+                    <p class="thumb-avatar-name">Clever Programmer</p>
                     <p class="thumb-number-of-views">3,000 Views</p>
                 </div>
             </div>
