--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         <main>
             <section>
                 <div class="embeded-video">
-                    <iframe src="https://www.youtube.com/embed/Qqx_wzMmFeA" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/Qqx_wzMmFeA"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
                 </div>
 
                 <div class="video-description">
@@ -43,33 +45,45 @@
                         <h1 class="video-title">Javascript Tutorial for Beginners</h1>
 
                         <div class="video-author-details">
-                            <a href="#"><img src="/img/avatar.jpg" alt="avatar-pic" class="avatar"></a>
-                          <div class="avatar-subscribe-right">
-                            <a href="#"><p class="avatar-name">Clever Programmer</p></a>
-                            <a href="#">
-                                <div class="subscribe-button">
-                                    
-                                    <button class="subscribe-button-red">Subscribe</button>
-                                    <button class="number-of-suscribers">750</button>
-                                </div>
-                            </a>
-                          </div>
-                          <h2 class="number-of-views">5,000 Views</h2>
+                            <a href="#"><img src="/img/avatar.jpg" alt="avatar-pic" class="avatar-pic"></a>
+                            <div class="avatar-subscribe-right">
+                                <a href="#">
+                                    <p class="avatar-name">Clever Programmer</p>
+                                </a>
+                                <a href="#">
+                                    <div class="subscribe-button">
+
+                                        <button class="subscribe-button-red">Subscribe</button>
+                                        <button class="number-of-suscribers">750</button>
+                                    </div>
+                                </a>
+                            </div>
+                            <h2 class="number-of-views">5,000 views</h2>
                         </div>
 
-                        
+
                         <hr>
 
                         <div class="video-description-icons">
                             <div class="video-left-description-icons">
-                                <a class="icon-desc" href="#"><div class="icon1"><i class="fas fa-plus"></i></div><span>Add to</span></a>
-                                <a class="icon-desc" href="#"><div class="icon1"><i class="fas fa-share"></i></div><span>Share</span></a>
-                                <a class="icon-desc" href="#"><div class="icon1"><i class="fas fa-ellipsis-h"></i></div><span>More</span></a>
+                                <a class="icon-desc" href="#">
+                                    <div class="icon1"><i class="fas fa-plus"></i></div><span>Add to</span>
+                                </a>
+                                <a class="icon-desc" href="#">
+                                    <div class="icon1"><i class="fas fa-share"></i></div><span>Share</span>
+                                </a>
+                                <a class="icon-desc" href="#">
+                                    <div class="icon1"><i class="fas fa-ellipsis-h"></i></div><span>More</span>
+                                </a>
                             </div>
 
                             <div class="video-right-description-icons">
-                                <a class="icon-desc" href="#"><div class="icon1"><i class="fas fa-thumbs-up"></i></div><span>845</span></a>
-                                <a class="icon-desc" href="#"><div class="icon1"><i class="fas fa-thumbs-down"></i></div><span>25</span></a>
+                                <a class="icon-desc" href="#">
+                                    <div class="icon1"><i class="fas fa-thumbs-up"></i></div><span>845</span>
+                                </a>
+                                <a class="icon-desc" href="#">
+                                    <div class="icon1"><i class="fas fa-thumbs-down"></i></div><span>25</span>
+                                </a>
                             </div>
 
                         </div>
@@ -110,14 +124,14 @@
             </div>
 
             <div class="recommended-videos">
-              <a>
-                <img src="/img/aside.png" alt="AWS Solutions" class="sidebar-thumbnails">
-                <div class="thumbnail-description">
-                    <p class="thumb-title">Why Get AWS Solutions Architect?</p>
-                    <p class="thumb-avatar-name">freeCodeCamp.org</p>
-                    <p class="thumb-number-of-views">3,000 Views</p>
-                </div>
-              </a>
+                <a>
+                    <img src="/img/aside.png" alt="AWS Solutions" class="sidebar-thumbnails">
+                    <div class="thumbnail-description">
+                        <p class="thumb-title">Why Get AWS Solutions Architect?</p>
+                        <p class="thumb-avatar-name">freeCodeCamp.org</p>
+                        <p class="thumb-number-of-views">3,000 Views</p>
+                    </div>
+                </a>
             </div>
 
             <hr>
@@ -131,7 +145,8 @@
                 </div>
             </div>
             <div class="recommended-videos">
-                <img src="/img/aside3.webp" alt="JavaScript Tutorial for Beginners - Full Course in 8 Hours [2020]" class="sidebar-thumbnails">
+                <img src="/img/aside3.webp" alt="JavaScript Tutorial for Beginners - Full Course in 8 Hours [2020]"
+                    class="sidebar-thumbnails">
                 <div class="thumbnail-description">
                     <p class="thumb-title">JavaScript Tutorial for Beginners </p>
                     <p class="thumb-avatar-name">Clever Programmer</p>
@@ -149,43 +164,61 @@
 
             <div class="recommended-videos">
                 <a>
-                  <img src="/img/aside.png" alt="AWS Solutions" class="sidebar-thumbnails">
-                  <div class="thumbnail-description">
-                      <p class="thumb-title">Why Get AWS Solutions Architect?</p>
-                      <p class="thumb-avatar-name">freeCodeCamp.org</p>
-                      <p class="thumb-number-of-views">3,000 Views</p>
-                  </div>
+                    <img src="/img/aside.png" alt="AWS Solutions" class="sidebar-thumbnails">
+                    <div class="thumbnail-description">
+                        <p class="thumb-title">Why Get AWS Solutions Architect?</p>
+                        <p class="thumb-avatar-name">freeCodeCamp.org</p>
+                        <p class="thumb-number-of-views">3,000 Views</p>
+                    </div>
                 </a>
-              </div>
-              <div class="recommended-videos">
-                  <img src="/img/aside2.png" alt="React in 5hours" class="sidebar-thumbnails">
-                  <div class="thumbnail-description">
-                      <p class="thumb-title">React in 5hours</p>
-                      <p class="thumb-avatar-name">freeCodeCamp.org</p>
-                      <p class="thumb-number-of-views">3,000 Views</p>
-                  </div>
-              </div>
-              <div class="recommended-videos">
-                  <img src="/img/aside3.webp" alt="JavaScript Tutorial for Beginners - Full Course in 8 Hours [2020]" class="sidebar-thumbnails">
-                  <div class="thumbnail-description">
-                      <p class="thumb-title">JavaScript Tutorial for Beginners </p>
-                      <p class="thumb-avatar-name">Clever Programmer</p>
-                      <p class="thumb-number-of-views">3,000 Views</p>
-                  </div>
-              </div>
-              <div class="recommended-videos">
-                  <img src="/img/aside4.webp" alt="Learn CSS in 20mins" class="sidebar-thumbnails">
-                  <div class="thumbnail-description">
-                      <p class="thumb-title">Learn CSS in 20mins</p>
-                      <p class="thumb-avatar-name">Webdev Simplified</p>
-                      <p class="thumb-number-of-views">3,000 Views</p>
-                  </div>
-              </div>
-              <div class="recommended-videos">
-                <img src="/img/aside3.webp" alt="JavaScript Tutorial for Beginners - Full Course in 8 Hours [2020]" class="sidebar-thumbnails">
+            </div>
+            <div class="recommended-videos">
+                <img src="/img/aside2.png" alt="React in 5hours" class="sidebar-thumbnails">
+                <div class="thumbnail-description">
+                    <p class="thumb-title">React in 5hours</p>
+                    <p class="thumb-avatar-name">freeCodeCamp.org</p>
+                    <p class="thumb-number-of-views">3,000 Views</p>
+                </div>
+            </div>
+            <div class="recommended-videos">
+                <img src="/img/aside3.webp" alt="JavaScript Tutorial for Beginners - Full Course in 8 Hours [2020]"
+                    class="sidebar-thumbnails">
                 <div class="thumbnail-description">
                     <p class="thumb-title">JavaScript Tutorial for Beginners </p>
                     <p class="thumb-avatar-name">Clever Programmer</p>
+                    <p class="thumb-number-of-views">3,000 Views</p>
+                </div>
+            </div>
+            <div class="recommended-videos">
+                <img src="/img/aside4.webp" alt="Learn CSS in 20mins" class="sidebar-thumbnails">
+                <div class="thumbnail-description">
+                    <p class="thumb-title">Learn CSS in 20mins</p>
+                    <p class="thumb-avatar-name">Webdev Simplified</p>
+                    <p class="thumb-number-of-views">3,000 Views</p>
+                </div>
+            </div>
+            <div class="recommended-videos">
+                <img src="/img/aside3.webp" alt="JavaScript Tutorial for Beginners - Full Course in 8 Hours [2020]"
+                    class="sidebar-thumbnails">
+                <div class="thumbnail-description">
+                    <p class="thumb-title">JavaScript Tutorial for Beginners </p>
+                    <p class="thumb-avatar-name">Clever Programmer</p>
+                    <p class="thumb-number-of-views">3,000 Views</p>
+                </div>
+            </div>
+            <div class="recommended-videos">
+                <img src="/img/aside4.webp" alt="Learn CSS in 20mins" class="sidebar-thumbnails">
+                <div class="thumbnail-description">
+                    <p class="thumb-title">Learn CSS in 20mins</p>
+                    <p class="thumb-avatar-name">Webdev Simplified</p>
+                    <p class="thumb-number-of-views">3,000 Views</p>
+                </div>
+            </div>
+            <div class="recommended-videos">
+                <img src="/img/aside2.png" alt="React in 5hours" class="sidebar-thumbnails">
+                <div class="thumbnail-description">
+                    <p class="thumb-title">React in 5hours</p>
+                    <p class="thumb-avatar-name">freeCodeCamp.org</p>
                     <p class="thumb-number-of-views">3,000 Views</p>
                 </div>
             </div>
