refactor image path on HTML

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <h1 class="video-title">Javascript Tutorial for Beginners</h1>
 
                         <div class="video-author-details">
-                            <a href="#"><img src="/img/avatar.jpg" alt="avatar-pic" class="avatar-pic"></a>
+                            <a href="#"><img src="img/avatar.jpg" alt="avatar-pic" class="avatar-pic"></a>
                             <div class="avatar-subscribe-right">
                                 <a href="#">
                                     <p class="avatar-name">Clever Programmer</p>
@@ -125,7 +125,7 @@
 
             <div class="recommended-videos">
                 <a>
-                    <img src="/img/aside.png" alt="AWS Solutions" class="sidebar-thumbnails">
+                    <img src="img/aside.png" alt="AWS Solutions" class="sidebar-thumbnails">
                     <div class="thumbnail-description">
                         <p class="thumb-title">Why Get AWS Solutions Architect?</p>
                         <p class="thumb-avatar-name">freeCodeCamp.org</p>
@@ -137,7 +137,7 @@
             <hr>
 
             <div class="recommended-videos">
-                <img src="/img/aside2.png" alt="React in 5hours" class="sidebar-thumbnails">
+                <img src="img/aside2.png" alt="React in 5hours" class="sidebar-thumbnails">
                 <div class="thumbnail-description">
                     <p class="thumb-title">React in 5hours</p>
                     <p class="thumb-avatar-name">freeCodeCamp.org</p>
@@ -145,7 +145,7 @@
                 </div>
             </div>
             <div class="recommended-videos">
-                <img src="/img/aside3.webp" alt="JavaScript Tutorial for Beginners - Full Course in 8 Hours [2020]"
+                <img src="img/aside3.webp" alt="JavaScript Tutorial for Beginners - Full Course in 8 Hours [2020]"
                     class="sidebar-thumbnails">
                 <div class="thumbnail-description">
                     <p class="thumb-title">JavaScript Tutorial for Beginners </p>
@@ -154,7 +154,7 @@
                 </div>
             </div>
             <div class="recommended-videos">
-                <img src="/img/aside4.webp" alt="Learn CSS in 20mins" class="sidebar-thumbnails">
+                <img src="img/aside4.webp" alt="Learn CSS in 20mins" class="sidebar-thumbnails">
                 <div class="thumbnail-description">
                     <p class="thumb-title">Learn CSS in 20mins</p>
                     <p class="thumb-avatar-name">Webdev Simplified</p>
@@ -164,7 +164,7 @@
 
             <div class="recommended-videos">
                 <a>
-                    <img src="/img/aside.png" alt="AWS Solutions" class="sidebar-thumbnails">
+                    <img src="img/aside.png" alt="AWS Solutions" class="sidebar-thumbnails">
                     <div class="thumbnail-description">
                         <p class="thumb-title">Why Get AWS Solutions Architect?</p>
                         <p class="thumb-avatar-name">freeCodeCamp.org</p>
@@ -173,7 +173,7 @@
                 </a>
             </div>
             <div class="recommended-videos">
-                <img src="/img/aside2.png" alt="React in 5hours" class="sidebar-thumbnails">
+                <img src="img/aside2.png" alt="React in 5hours" class="sidebar-thumbnails">
                 <div class="thumbnail-description">
                     <p class="thumb-title">React in 5hours</p>
                     <p class="thumb-avatar-name">freeCodeCamp.org</p>
@@ -181,7 +181,7 @@
                 </div>
             </div>
             <div class="recommended-videos">
-                <img src="/img/aside3.webp" alt="JavaScript Tutorial for Beginners - Full Course in 8 Hours [2020]"
+                <img src="img/aside3.webp" alt="JavaScript Tutorial for Beginners - Full Course in 8 Hours [2020]"
                     class="sidebar-thumbnails">
                 <div class="thumbnail-description">
                     <p class="thumb-title">JavaScript Tutorial for Beginners </p>
@@ -190,7 +190,7 @@
                 </div>
             </div>
             <div class="recommended-videos">
-                <img src="/img/aside4.webp" alt="Learn CSS in 20mins" class="sidebar-thumbnails">
+                <img src="img/aside4.webp" alt="Learn CSS in 20mins" class="sidebar-thumbnails">
                 <div class="thumbnail-description">
                     <p class="thumb-title">Learn CSS in 20mins</p>
                     <p class="thumb-avatar-name">Webdev Simplified</p>
@@ -198,7 +198,7 @@
                 </div>
             </div>
             <div class="recommended-videos">
-                <img src="/img/aside3.webp" alt="JavaScript Tutorial for Beginners - Full Course in 8 Hours [2020]"
+                <img src="img/aside3.webp" alt="JavaScript Tutorial for Beginners - Full Course in 8 Hours [2020]"
                     class="sidebar-thumbnails">
                 <div class="thumbnail-description">
                     <p class="thumb-title">JavaScript Tutorial for Beginners </p>
@@ -207,7 +207,7 @@
                 </div>
             </div>
             <div class="recommended-videos">
-                <img src="/img/aside4.webp" alt="Learn CSS in 20mins" class="sidebar-thumbnails">
+                <img src="img/aside4.webp" alt="Learn CSS in 20mins" class="sidebar-thumbnails">
                 <div class="thumbnail-description">
                     <p class="thumb-title">Learn CSS in 20mins</p>
                     <p class="thumb-avatar-name">Webdev Simplified</p>
@@ -215,7 +215,7 @@
                 </div>
             </div>
             <div class="recommended-videos">
-                <img src="/img/aside2.png" alt="React in 5hours" class="sidebar-thumbnails">
+                <img src="img/aside2.png" alt="React in 5hours" class="sidebar-thumbnails">
                 <div class="thumbnail-description">
                     <p class="thumb-title">React in 5hours</p>
                     <p class="thumb-avatar-name">freeCodeCamp.org</p>
