--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="logo-nav-bar">
             <!--i class="fas fa-bars"></i-->
-            <img id="img-logo" src="img/téléchargement.png" alt="youtube logo">
+            <img class="img-logo" src="img/téléchargement.png" alt="youtube logo">
         </div>
 
         <div class="search-nav-bar">
@@ -231,13 +231,13 @@
 
     <footer>
         <div class="footer-start">
-            <img id="img-logo" src="img/téléchargement.png" alt="youtube-logo">
+            <img class="img-logo" src="img/téléchargement.png" alt="youtube-logo">
             <div class="footer-buttons">
-                <button type="">Language: English <i class="fas fa-caret-down"></i></button>
-                <button type="">Location: Africa <i class="fas fa-caret-down"></i></button>
-                <button type="">Restricted Mode: Off <i class="fas fa-caret-down"></i></button>
-                <button type=""><i class="fas fa-hourglass-end"></i> History</button>
-                <button type="">Help <i class="far fa-question-circle"></i></button>
+                <button>Language: English <i class="fas fa-caret-down"></i></button>
+                <button>Location: Africa <i class="fas fa-caret-down"></i></button>
+                <button>Restricted Mode: Off <i class="fas fa-caret-down"></i></button>
+                <button><i class="fas fa-hourglass-end"></i> History</button>
+                <button>Help <i class="far fa-question-circle"></i></button>
             </div>
         </div>
 
