seach bar update

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
         </div>
 
-        <aside>
+        <aside class="sidebar">
             <div class="sidebar-headings">
                 <span>Up next</span>
                 <span class="autoplay">Autoplay</span>
