sidebar headings update

--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
 
                 <div class="video-description">
                     <div class="video-description-main">
-                        <h1 class="video-title">Javascript Tutorial for Beginners</h1>
+                        <p class="video-title">Javascript Tutorial for Beginners</p>
 
                         <div class="video-author-details">
                             <a href="#"><img src="img/avatar.jpg" alt="avatar-pic" class="avatar-pic"></a>
-                            <div class="avatar-subscribe-right">
+                            <div class="avatar-infos-subscribe">
                                 <a href="#">
                                     <p class="avatar-name">Clever Programmer</p>
                                 </a>
 
-                                <div class="subscribe-button">
+                                <div class="chanel-subscribe-button">
                                     <button class="subscribe-btn-red" type="submit">Subscribe</button>
                                     <button class="number-of-suscribers-btn" type="submit">750</button>
                                 </div>
