add spinner at comments section

--- a/index.html
+++ b/index.html
@@ -112,20 +112,24 @@
 
             <section class="video-comments">
                 <h1>Video Comments</h1>
-                <div>
-                    <p>loading...</p>
+                <div class="loader">
+                    <i class="fa fa-spinner fa-spin" style="font-size: 24px"></i>
+                    loading...
                 </div>
                 <hr>
-                <div>
-                    <p>loading...</p>
+                <div class="loader">
+                    <i class="fa fa-spinner fa-spin" style="font-size: 24px"></i>
+                    loading...
                 </div>
                 <hr>
-                <div>
-                    <p>loading...</p>
+                <div class="loader">
+                    <i class="fa fa-spinner fa-spin" style="font-size: 24px"></i>
+                    loading...
                 </div>
                 <hr>
-                <div>
-                    <p>loading...</p>
+                <div class="loader">
+                    <i class="fa fa-spinner fa-spin" style="font-size: 24px"></i>
+                    loading...
                 </div>
                 <hr>
             </section>
